fix blog img size too big issue

--- a/src/css/variables/docsStyle.less
+++ b/src/css/variables/docsStyle.less
@@ -93,7 +93,7 @@
   }
 
   img {
-    width: 90%;
+    max-width: 90%;
     margin: 32px auto;
     display: block;
 
@@ -198,7 +198,7 @@
 
   // External link image
   img[src^='http'] {
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
 
